--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -18,7 +18,7 @@
 	<link href="{{ '/css/modern-business.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
 	<!-- Custom Fonts -->
-	<link href="{{ '/css/font-awesome-4.6.3.min.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
+	<link href="{{ '/css/font-awesome.min.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
 	<!-- Jekyll-mb CSS with local additions-->
 	<link href="{{ '/css/jekyll-mb.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
