--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -2,24 +2,26 @@
 layout: page
 ---
 
-<h4>{% include date.html date=page.date style='full' %}</h4>
-
-{{ content }}
-
-<p>
-Tags:
-{% for tag in page.tags %}
-	<a href="{{ tag | slugify | prepend: '/tags.html#' | prepend: site.baseurl }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
-{% endfor %}
-</p>
-
-<hr />
-
-<div class="PageNavigation">
-	{% if page.previous.url %}
-		<a class="prev" href="{{ page.previous.url | prepend: site.baseurl }}">« {{page.previous.title}}</a>
-	{% endif %}
-	{% if page.next.url %}
-		<a class="next" href="{{ page.next.url | prepend: site.baseurl }}">{{page.next.title}} »</a>
-	{% endif %}
+<div class="panel panel-default">
+	<div class="panel-heading"><i class="fa fa-calendar-o"></i>&nbsp;{% include date.html date=page.date style='full' %}</div>
+	<div class="panel-body">
+		{{ content }}
+	</div>
+	<div class="panel-footer">
+		Tags:
+		{% for tag in page.tags %}
+			<a href="{{ tag | slugify | prepend: '/tags.html#' | prepend: site.baseurl }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
+		{% endfor %}
+	</div>
 </div>
+
+<nav>
+	<ul class="pager">
+		{% if page.previous.url %}
+			<li class="previous"><a href="{{ page.previous.url | prepend: site.baseurl }}"><span aria-hidden="true">«</span> {{page.previous.title}}</a></li>
+		{% endif %}
+		{% if page.next.url %}
+			<li class="next"><a href="{{ page.next.url | prepend: site.baseurl }}">{{page.next.title}} <span aria-hidden="true">»</span></a></li>
+		{% endif %}
+	</ul>
+</nav>
