--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -12,6 +12,13 @@ layout: page
 		{% for tag in page.tags %}
 			<a href="{{ tag | slugify | prepend: '/tags.html#' | prepend: site.baseurl }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
 		{% endfor %}
+		{% if page.links %}
+			<br />
+			Links:
+			{% for link in page.links %}
+				<a href="{{ link.url }}">{{ link.title }}</a>{% unless forloop.last %},{% endunless %}
+			{% endfor %}
+		{% endif %}
 	</div>
 </div>
 
