--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -12,9 +12,12 @@ layout: page
 		{% for tag in page.tags %}
 			<a href="{{ tag | slugify | prepend: '/tags.html#' | prepend: site.baseurl }}">{{ tag }}</a>{% unless forloop.last %},{% endunless %}
 		{% endfor %}
-		{% if page.links %}
+		{% if page.links or page.rauhesitten %}
 			<br />
 			Links:
+			{% if page.rauhesitten %}
+				<a href="{{ page.rauhesitten | prepend: 'http://ekkart.de/rauhesitten/' | append: '/' }}">Rauhe Sitten</a>{% if page.links %},{% endif %}
+			{% endif %}
 			{% for link in page.links %}
 				<a href="{{ link.url }}">{{ link.title }}</a>{% unless forloop.last %},{% endunless %}
 			{% endfor %}
