--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -14,12 +14,12 @@ layout: page
 		{% endfor %}
 		{% if page.links or page.rauhesitten %}
 			<br />
-			Links:
+			Links <i class="fa fa-external-link"></i>:
 			{% if page.rauhesitten %}
-				<a href="{{ page.rauhesitten | prepend: 'http://ekkart.de/rauhesitten/' | append: '/' }}">Rauhe Sitten</a>{% if page.links %},{% endif %}
+				<a href="{{ page.rauhesitten | prepend: 'http://ekkart.de/rauhesitten/' | append: '/' }}" target="_blank">Rauhe Sitten</a>{% if page.links %},{% endif %}
 			{% endif %}
 			{% for link in page.links %}
-				<a href="{{ link.url }}">{{ link.title }}</a>{% unless forloop.last %},{% endunless %}
+				<a href="{{ link.url }}" target="_blank">{{ link.title }}</a>{% unless forloop.last %},{% endunless %}
 			{% endfor %}
 		{% endif %}
 	</div>
