no-print class for higing elements in print

--- a/jekyll/_layouts/page.html
+++ b/jekyll/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 	<div class="col-lg-8 mb-content">
 		{{ content }}
 	</div>
-	<div class="col-lg-4 mb-sidebar">
+	<div class="col-lg-4 mb-sidebar no-print">
 
 		<div class="well">
 			<h4>{{ site.data.i18n.locales[site.locale].search }}</h4>
