--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -25,7 +25,7 @@ layout: page
 	</div>
 </div>
 
-<nav>
+<nav class="no-print">
 	<ul class="pager">
 		{% if page.previous.url %}
 			<li class="previous"><a href="{{ page.previous.url | prepend: site.baseurl }}"><span aria-hidden="true">«</span> {{page.previous.title}}</a></li>
