--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -20,7 +20,7 @@
 	<!-- Custom Fonts -->
 	<link href="{{ '/css/font-awesome.min.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
-	<!-- Jekyll-mb CSS with local additions-->
+	<!-- Jekyll-mb CSS -->
 	<link href="{{ '/css/jekyll-mb.css' | prepend: site.baseurl }}" rel="stylesheet" type="text/css">
 
 </head>
